# umi

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  技术报告 2023-9-23.pptx
.github/workflows/: code.yml  mirror.yml
cargo-config/: config.toml
docs/: index.md  kcov.md
docs/dev/: sdmmc.md  virtio.md
docs/kernel/: index.md
docs/lib/: afat32.md  art.md  co-trap.md  devices.md  kmem.md  ksc.md  ksync.md  ktime.md  misc.md
mizu/: Cargo.toml  Makefile  build.rs  memory.x
mizu/.cargo/: config.toml
mizu/dev/plic/: Cargo.toml
mizu/dev/plic/src/: dev.rs  intr.rs  lib.rs
mizu/dev/sdmmc/: Cargo.toml
mizu/dev/sdmmc/src/: adma.rs  imp.rs  lib.rs  reg.rs
mizu/dev/sdmmc/src/imp/: mars.rs
mizu/dev/uart/: Cargo.toml
mizu/dev/uart/src/: lib.rs
mizu/dev/virtio/: Cargo.toml
mizu/dev/virtio/src/: block.rs  lib.rs  net.rs
mizu/kernel/: Cargo.toml  Makefile  build.rs  link.ld
mizu/kernel/.cargo/: config.toml
mizu/kernel/cargo-config/: config.toml
mizu/kernel/src/: cpu.rs  dev.rs  fs.rs  main.rs  mem.rs  rxx.rs  syscall.rs  task.rs  test.rs  trap.S  trap.rs
mizu/kernel/src/dev/: block.rs  intr.rs  net.rs  sdmmc.rs  serial.rs  virtio.rs
mizu/kernel/src/fs/: cache.rs  debug.rs  dev.rs  pipe.rs  proc.rs  serial.rs  socket.rs  tmp.rs
mizu/kernel/src/mem/: futex.rs  shm.rs  syscall.rs  user.rs
mizu/kernel/src/syscall/: ffi.rs
mizu/kernel/src/task/: cmd.rs  elf.rs  fd.rs  future.rs  init.rs  signal.rs  syscall.rs  time.rs
mizu/kernel/src/task/fd/: syscall.rs
mizu/kernel/src/task/fd/syscall/: fs.rs  io.rs  net.rs
mizu/kernel/src/task/signal/: syscall.rs
mizu/lib/afat32/: Cargo.toml
mizu/lib/afat32/src/: dir.rs  dirent.rs  file.rs  fs.rs  lib.rs  raw.rs  table.rs  time.rs
mizu/lib/art/: Cargo.toml
mizu/lib/art/src/: lib.rs  queue.rs  rand.rs  sched.rs  task.rs
mizu/lib/co-trap/: Cargo.toml
mizu/lib/co-trap/src/: imp.S  imp.rs  lib.rs  tf.rs
mizu/lib/config/: Cargo.toml
mizu/lib/config/src/: cv1811h.rs  lib.rs  qemu-virt.rs
mizu/lib/devices/: Cargo.toml
mizu/lib/devices/src/: block.rs  common.rs  dev.rs  intr.rs  lib.rs  net.rs
mizu/lib/devices/src/dev/: block.rs  common.rs  plic.rs  uart.rs  virtio_blk.rs
mizu/lib/devices/src/net/: config.rs  driver.rs  socket.rs  stack.rs  time.rs
mizu/lib/devices/src/net/socket/: dns.rs  tcp.rs  udp.rs
mizu/lib/hart-id/: Cargo.toml
mizu/lib/hart-id/src/: lib.rs
mizu/lib/kalloc/: Cargo.toml
mizu/lib/kalloc/src/: imp.rs  lib.rs
mizu/lib/klog/: Cargo.toml
mizu/lib/klog/src/: imp.rs  lib.rs  logger.rs
mizu/lib/kmem/: Cargo.toml
mizu/lib/kmem/src/: frame.rs  insn.rs  lib.rs  lru.rs  phys.rs  virt.rs
mizu/lib/kmem/src/virt/: tlb.rs
mizu/lib/ksc/: Cargo.toml
mizu/lib/ksc-core/: Cargo.toml
mizu/lib/ksc-core/src/: error.rs  handler.rs  lib.rs  raw_reg.rs  scn.rs
mizu/lib/ksc-macros/: Cargo.toml
mizu/lib/ksc-macros/src/: bound.rs  expand.rs  lib.rs  lifetime.rs  parse.rs  receiver.rs
mizu/lib/ksc/src/: handler.rs  lib.rs
mizu/lib/ksync/: Cargo.toml
mizu/lib/ksync-core/: Cargo.toml
mizu/lib/ksync-core/src/: lib.rs  state.rs
mizu/lib/ksync/src/: atomic.rs  broadcast.rs  channel.rs  epoch.rs  lib.rs  mpmc.rs  mutex.rs  rcu.rs  rw_lock.rs  semaphore.rs  state.rs
mizu/lib/ksync/src/channel/: broadcast.rs  mpmc.rs  oneshot.rs
mizu/lib/ktime/: Cargo.toml
mizu/lib/ktime-core/: Cargo.toml
mizu/lib/ktime-core/src/: instant.rs  lib.rs
mizu/lib/ktime/src/: lib.rs  timer.rs
mizu/lib/paging/: Cargo.toml
mizu/lib/paging/src/: addr.rs  consts.rs  entry.rs  level.rs  lib.rs
mizu/lib/rand-riscv/: Cargo.toml
mizu/lib/rand-riscv/src/: lib.rs
mizu/lib/range-map/: Cargo.toml
mizu/lib/range-map/src/: lib.rs
mizu/lib/sygnal/: Cargo.toml
mizu/lib/sygnal/src/: action.rs  lib.rs  queue.rs  types.rs
mizu/lib/umifs/: Cargo.toml
mizu/lib/umifs/src/: lib.rs  misc.rs  path.rs  traits.rs  types.rs
mizu/lib/umio/: Cargo.toml
mizu/lib/umio/src/: event.rs  io.rs  lib.rs
mizu/src/: main.rs  rxx.rs
scripts/: config.patch.toml  perf.sh  revendor.sh
