[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "mizu"
version = "0.1.0"

[features]
default = ["qemu-virt"]
qemu-virt = ["config/qemu-virt"]
test = [
  "art/test",
  "kalloc/test",
  "klog/test",
  "ktime/test",
]

[dependencies]
# Local crates
art = {path = "../lib/art"}
co-trap = {path = "../lib/co-trap"}
config = {path = "../lib/config", default-features = false}
hart-id = {path = "../lib/hart-id"}
kalloc = {path = "../lib/kalloc"}
klog = {path = "../lib/klog"}
kmem = {path = "../lib/kmem"}
ksc = {path = "../lib/ksc"}
ksync = {path = "../lib/ksync"}
ktime = {path = "../lib/ktime"}
rv39-paging = {path = "../lib/paging"}
sygnal = {path = "../lib/sygnal"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
log = "0"
pin-project = "1"
r0 = "1"
riscv = "0"
sbi-rt = {git = "https://github.com/js2xxx/sbi-rt", branch = "multitarget"}
spin = "0"
static_assertions = "1"

[build-dependencies]
config = {path = "../lib/config", default-features = false}
