[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "mizu"
version = "0.1.0"

[features]
default = ["qemu-virt"]
qemu-virt = ["config/qemu-virt"]
test = [
  "art/test",
  "kalloc/test",
  "ktime/test",
]

[dependencies]
# Local libs
afat32 = {path = "../lib/afat32"}
art = {path = "../lib/art"}
co-trap = {path = "../lib/co-trap"}
config = {path = "../lib/config", default-features = false}
devices = {path = "../lib/devices"}
hart-id = {path = "../lib/hart-id"}
kalloc = {path = "../lib/kalloc"}
kmem = {path = "../lib/kmem"}
ksc = {path = "../lib/ksc"}
ksync = {path = "../lib/ksync"}
ktime = {path = "../lib/ktime"}
rand-riscv = {path = "../lib/rand-riscv"}
rv39-paging = {path = "../lib/paging"}
sygnal = {path = "../lib/sygnal"}
umifs = {path = "../lib/umifs"}
umio = {path = "../lib/umio"}
# Local drivers
plic = {path = "../dev/plic"}
uart = {path = "../dev/uart"}
virtio = {path = "../dev/virtio"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
async-trait = "0"
bitflags = "2"
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
fdt = "0"
futures-util = {version = "0", default-features = false, features = ["alloc"]}
goblin = {version = "0", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
hashbrown = {version = "0", default-features = false, features = ["inline-more"]}
heapless = "0"
log = "0"
pin-project = "1"
r0 = "1"
riscv = "0"
sbi-rt = {git = "https://github.com/js2xxx/sbi-rt", branch = "multitarget"}
scoped-tls = {git = "https://github.com/js2xxx/scoped-tls", branch = "no_std"}
spin = "0"
static_assertions = "1"
virtio-drivers = {git = "https://github.com/rcore-os/virtio-drivers", branch = "new-netdev"}
zerocopy = "0"

[dependencies.smoltcp]
branch = "reuse_endpoints"
default-features = false
features = [
  "log",
  "proto-ipv4",
  "proto-ipv6",
]
git = "https://github.com/js2xxx/smoltcp"

[build-dependencies]
config = {path = "../lib/config", default-features = false}
