[package]
edition = "2021"
name = "plic"
version = "0.1.0"

[dependencies]
# Local crates
devices = {path = "../../lib/devices"}
hart-id = {path = "../../lib/hart-id"}
ksc = {path = "../../lib/ksc"}
ksync = {path = "../../lib/ksync"}
# External crates
log = "0"
spin = "0"
static_assertions = "1"
volatile = "0"
