[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "art"
version = "0.1.0"

[dependencies]
# Local crates
config = {path = "../config"}
# External crates
array-macro = "2"
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
async-task = {version = "4", default-features = false}
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
heapless = "0"
