[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "art"
version = "0.1.0"

[features]
test = []

[dependencies]
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
async-task = {version = "4", default-features = false}
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
rand_chacha = {version = "0", default-features = false}
scoped-tls = {git = "https://github.com/js2xxx/scoped-tls", branch = "no_std"}
