[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "co-trap"
version = "0.1.0"

[features]
test = []

[dependencies]
# Local crates
ksc-core = {path = "../ksc-core"}
ksync-core = {path = "../ksync-core"}
# External crates
bevy_utils_proc_macros = "0"
enum-primitive-derive = "0"
log = "0"
num-traits = {version = "0", default-features = false}
riscv = "0"
static_assertions = "1"
