[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "devices"
version = "0.1.0"

[features]
test = []

[dependencies]
# Local crates
hart-id = {path = "../hart-id"}
kmem = {path = "../kmem"}
ksc = {path = "../ksc"}
ksync = {path = "../ksync"}
ktime = {path = "../ktime"}
rand-riscv = {path = "../rand-riscv"}
rv39-paging = {path = "../paging"}
umio = {path = "../umio"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
async-trait = "0"
bitflags = "2"
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
futures-lite = {version = "1", default-features = false, features = ["alloc"]}
futures-util = {version = "0", default-features = false, features = ["alloc"]}
hashbrown = {version = "0", default-features = false, features = ["inline-more"]}
log = "0"
spin = "0"
static_assertions = "1"
virtio-drivers = "0"
volatile = "0"
