[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "devices"
version = "0.1.0"

[features]
test = []

[dependencies]
# Local crates
ksc = {path = "../ksc"}
ksync = {path = "../ksync"}
ktime = {path = "../ktime"}
umio = {path = "../umio"}
# External crates
async-trait = "0"
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
futures-lite = {version = "1", default-features = false, features = ["alloc"]}
log = "0"
spin = "0"
volatile = "0"
