[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "devices"
version = "0.1.0"

[features]
test = []

[dependencies]
# Local crates
ksc = {path = "../ksc"}
ksync = {path = "../ksync"}
ktime = {path = "../ktime"}
rand-riscv = {path = "../rand-riscv"}
umio = {path = "../umio"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
async-trait = "0"
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
futures-util = {version = "0", default-features = false, features = ["alloc"]}
heapless = "0"
log = "0"
managed = {version = "0", default-features = false, features = ["alloc"]}
spin = "0"
volatile = "0"

[dependencies.smoltcp]
default-features = false
features = [
  "log",
  "medium-ethernet",
  "proto-ipv4",
  "proto-igmp",
  "proto-dhcpv4",
  "proto-ipv6",
  "proto-dns",
  "socket-raw",
  "socket-udp",
  "socket-tcp",
  "socket-dhcpv4",
  "socket-dns",
  "async",
  "alloc",
]
version = "0"
