[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "klog"
version = "0.1.0"

[features]
test = ["ktime-core/test"]

[dependencies]
# Local crates
ksync-core = {path = "../ksync-core"}
ktime-core = {path = "../ktime-core"}
# External crates
log = "0"
spin = "0"
[dependencies.sbi-rt]
branch = "multitarget"
features = ["legacy"]
git = "https://github.com/js2xxx/sbi-rt"
