[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ksc"
version = "0.1.0"

[features]
test = ["dep:smol"]

[dependencies]
# Local crates
co-trap = {path = "../co-trap"}
ksc-core = {path = "../ksc-core"}
rand-riscv = {path = "../rand-riscv"}
# External crates
bevy_utils_proc_macros = "0"
futures-util = {version = "0", default-features = false, features = ["alloc"]}
hashbrown = {version = "0", default-features = false, features = ["inline-more"]}
smol = {version = "1", optional = true}
