[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ksync"
version = "0.1.0"

[dependencies]
# Local crates
ksync-core = {path = "../ksync-core"}
ktime = {path = "../ktime"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
event-listener = {git = "https://github.com/js2xxx/event-listener", default-features = false}
