[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ksync"
version = "0.1.0"

[features]
test = ["ktime/test", "dep:smol"]

[dependencies]
# Local crates
ksync-core = {path = "../ksync-core"}
ktime = {path = "../ktime"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
event-listener = {git = "https://github.com/js2xxx/event-listener", default-features = false}
futures-lite = {version = "1", default-features = false, features = ["alloc"]}
smol = {version = "1", optional = true}
