[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ksync"
version = "0.1.0"

[features]
test = ["ktime/test", "dep:spin_on"]

[dependencies]
# Local crates
ksync-core = {path = "../ksync-core"}
ktime = {path = "../ktime"}
rand-riscv = {path = "../rand-riscv"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
crossbeam-epoch = {version = "0", default-features = false, features = ["alloc", "nightly"]}
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
event-listener = {git = "https://github.com/js2xxx/event-listener", default-features = false}
futures-lite = {version = "1", default-features = false, features = ["alloc"]}
futures-util = {version = "0", default-features = false, features = ["alloc"]}
hashbrown = {version = "0", default-features = false, features = ["inline-more"]}
spin = "0"
spin_on = {version = "0", optional = true}
