[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "ktime"
version = "0.1.0"

[features]
test = ["ktime-core/test", "dep:smol"]

[dependencies]
# Local crates
ksync-core = {path = "../ksync-core"}
ktime-core = {path = "../ktime-core"}
# External crates
futures-lite = {version = "1", default-features = false, features = ["alloc"]}
heapless = "0"
pin-project = "1"
smol = {version = "1", optional = true}
spin = "0"
