[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sygnal"
version = "0.1.0"

[dependencies]
# Local crates
ksync = {path = "../ksync"}
rv39-paging = {path = "../paging"}
# External crates
array-macro = "2"
crossbeam-queue = {version = "0", default-features = false, features = ["alloc", "nightly"]}
spin = "0"
