[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "umio"
version = "0.1.0"

[dependencies]
# Local crates
ksc-core = {path = "../ksc-core"}
# External crates
arsc-rs = {git = "https://github.com/js2xxx/arsc"}
async-trait = "0"
futures-util = {version = "0", default-features = false, features = ["alloc"]}
log = "0"
